--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,9 +21,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.1.1'
+    compile "com.facebook.react:react-native:+"
 
-    compile "com.facebook.react:react-native:0.20.+"
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
