--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.quispoke.vectorImage">
+    package="com.quispoke.vectorimage">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
